@@ -753,12 +753,6 @@ public class HttpSolrClient extends SolrClient {
    */
   @Override
   public void close() throws IOException {
-    shutdown();
-  }
-
-  @Override
-  @Deprecated
-  public void shutdown() {
     if (httpClient != null && internalClient) {
       HttpClientUtil.close(httpClient);
     }
